# Space-Invaders

Space Invaders/: .cproject  .project  Alien1  Alien2  Bunker  CMakeLists.txt  Space Invaders  field
Space Invaders/informationFiles/: Alien1  Gun  level1  level2
Space Invaders/src/: Alien.cpp  Alien.h  Bullet.cpp  Bullet.h  Bunker.cpp  Bunker.h  CMakeLists.txt  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  GameFactory.cpp  GameFactory.h  Gun.cpp  Gun.h  gameController.cpp  gameController.h  gameModel.cpp  gameModel.h  gameView.cpp  gameView.h  main.cpp  read.cpp  read.h  utilities.cpp  utilities.h
Space Invaders/src/online code/: ImagesSprites.h  emptyWindow.h  touch.h
